# pygeocodio

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: lint.yml  release.yml  tests.yml
docs/: Makefile  conf.py  data.rst  exceptions.rst  geocode.rst  geocodio.rst  index.rst  install.rst  modules.rst  parse.rst  reverse.rst
geocodio/: __init__.py  client.py  data.py  exceptions.py
src/geocodio/: __init__.py  client.py  data.py
tests/: test_client.py  test_data.py
tests/response/: address.json  api_description.json  batch.json  batch_components.json  batch_components_dict.json  batch_dict.json  batch_reverse.json  batch_reverse_dict.json  missing_results.json  reverse.json  single.json  single_components.json
