[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pygeocodio"
dynamic = ["version"]
description = "Python wrapper for Geocod.io API"
readme = "README.rst"
license = {text = "BSD"}
authors = [
    {name = "Ben Lopatin", email = "ben@benlopatin.com"}
]
keywords = ["geocodio"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=1.0.0",
]
[project.optional-dependencies]
tests = [
    "requests>=1.0.0",
    "httpretty>=0.9.7",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
docs = [
    "Sphinx==7.0.1",
]

[project.urls]
Homepage = "https://github.com/bennylope/pygeocodio"

[tool.hatch.version]
path = "src/geocodio/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/geocodio"]

[tool.hatch.build.targets.sdist]
include = [
    "src/geocodio",
    "README.rst",
    "HISTORY.rst",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = ["test_*.py", "*_test.py"]
